// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengeController initialise should initialise device challenge 1`] = `
Object {
  "certificateChallenge": "ESJh38hYfJ7481UFTQgq63wxxiOub1Xt7YKGJIukrBlIA5RNR6rDriiQ977psN1u",
  "challengeId": "eb14da97-6c96-4833-8046-54d1697d7a49",
  "expires": 2099-01-01T00:00:00.000Z,
}
`;

exports[`ChallengeController verifyImplicit should verify device challenge 1`] = `
Object {
  "challengeConfirmation": "getConfirmationToken",
}
`;

exports[`ChallengeController verifyPin should verify device challenge with pin 1`] = `
Object {
  "challengeConfirmation": "getConfirmationToken",
}
`;

exports[`ChallengeController verifyRecoveryKey should verify device challenge with recovery key 1`] = `
Object {
  "challengeConfirmation": "getConfirmationToken",
  "recoveryKey": "AAAA-111222-BBBB-333444-CCCC",
}
`;

exports[`ChallengeController verifyRecoveryKey should verify device challenge with recovery key 2`] = `
Object {
  "device": Object {
    "device": Object {
      "data": Array [
        Object {
          "accountId": "51cc7c03-3f86-44ae-8be2-5fcf5536c08b",
          "created": 2021-01-01T08:00:00.000Z,
          "events": Array [
            Object {
              "date": 2021-01-01T08:00:00.000Z,
              "name": "device_created",
              "payload": Object {
                "accountId": "51cc7c03-3f86-44ae-8be2-5fcf5536c08b",
                "created": 2021-01-01T08:00:00.000Z,
                "id": "d9b9adec-81fa-4ea0-8cf3-44ccd4fe5162",
                "macAddress": "0025:96FF:FE12:3456",
                "name": "My iPhone 12",
                "pin": Object {
                  "signature": null,
                  "updated": 2021-01-01T08:00:00.000Z,
                },
                "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy
rvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE
tWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=
-----END RSA PUBLIC KEY-----
",
                "recoveryKey": Object {
                  "signature": null,
                  "updated": 2021-01-01T08:00:00.000Z,
                },
                "secret": Object {
                  "signature": null,
                  "updated": 2021-01-01T08:00:00.000Z,
                },
                "uniqueId": "a097a56f506a4091b4c93a8bfb8cec0f",
                "updated": 2021-01-01T08:00:00.000Z,
                "version": 0,
              },
            },
            Object {
              "date": 2021-01-01T08:00:00.000Z,
              "name": "device_recovery_key_changed",
              "payload": Object {
                "recoveryKey": Object {
                  "signature": "QUFBQS0xMTEyMjItQkJCQi0zMzM0NDQtQ0NDQw==",
                  "updated": 2021-01-01T08:00:00.000Z,
                },
              },
            },
          ],
          "id": "d9b9adec-81fa-4ea0-8cf3-44ccd4fe5162",
          "macAddress": "0025:96FF:FE12:3456",
          "name": "My iPhone 12",
          "pin": Object {
            "signature": null,
            "updated": 2021-01-01T08:00:00.000Z,
          },
          "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy
rvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE
tWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=
-----END RSA PUBLIC KEY-----
",
          "recoveryKey": Object {
            "signature": "QUFBQS0xMTEyMjItQkJCQi0zMzM0NDQtQ0NDQw==",
            "updated": 2021-01-01T08:00:00.000Z,
          },
          "secret": Object {
            "signature": null,
            "updated": 2021-01-01T08:00:00.000Z,
          },
          "uniqueId": "a097a56f506a4091b4c93a8bfb8cec0f",
          "updated": 2021-01-01T08:00:00.000Z,
          "version": 1,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`ChallengeController verifySecret should verify device challenge 1`] = `
Object {
  "challengeConfirmation": "getConfirmationToken",
}
`;
